--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -4,10 +4,19 @@
     font-family: "Roboto", sans-serif;
 }
 
-body {
+html, body {
+    height: 100%;
+    margin: 0;
+  }
+  
+  body {
     display: flex;
     flex-direction: column;
-}
+  }
+  
+  main {
+    flex: 1;
+  }
 
 @media (max-width: 768px) {
 
@@ -142,13 +151,25 @@ body {
 
             }
         }
-    } 
+    }
+
+    .daysWeatherInfo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 2rem;
+        justify-content: start;
+
+        h2 {
+        }
+        
+    }
     
     footer {
         background-color: var(--color-footer);
         display: flex;
-        flex-direction: column;
         justify-content: end;
+        flex-direction: column;
         width: 100%;
         padding: 1rem 0.7rem;
         margin: 0 auto;
