--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -63,7 +63,49 @@ html, body {
 
             }
         }
-    } 
+    }
+
+    .daysWeatherInfo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 3rem;
+        height: 100%;
+        width: 100%;
+        
+        h2 {
+            padding-bottom: 1.5em;
+            font-weight: var(--font-bold);
+        }
+
+        table {
+            height: 70%;
+            width: 70%;
+            
+            .mainColumn {
+                display: flex;
+                border: none;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+            }
+
+            tr, th, td {
+                border: none;
+                padding-top: 0.5rem;
+
+                tr:not(:last-child), td:not(:last-child), th:not(:last-child) {
+                    border-right: 1px solid #e0e0e0;
+                }
+                
+                p{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+        }
+    }
     
     footer {
         background-color: var(--color-footer);
@@ -157,23 +199,53 @@ html, body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 2rem;
-        justify-content: start;
-
-        h2 {
-        }
+        padding-top: 3rem;
+        height: 100%;
+        width: 100%;
         
+        h2 {
+            padding-bottom: 1.5em;
+            font-weight: var(--font-bold);
+        }
+
+        table {
+            height: 70%;
+            width: 70%;
+            
+            .mainColumn {
+                display: flex;
+                border: none;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+            }
+
+            tr, th, td {
+                border: none;
+                padding-top: 0.5rem;
+
+                tr:not(:last-child), td:not(:last-child), th:not(:last-child) {
+                    border-right: 1px solid #e0e0e0;
+                }
+                
+                p{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+        }
     }
     
     footer {
         background-color: var(--color-footer);
         display: flex;
-        justify-content: end;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         width: 100%;
+        height: 20%;
         padding: 1rem 0.7rem;
-        margin: 0 auto;
-        
         
         .footer-tittle {
             display: flex;
@@ -187,12 +259,12 @@ html, body {
             justify-content: center;
             font-size: var(--text-tiny);
             gap: 1rem;
-
+            
             .footer-links-email {
                 font-size: var(--text-tiny);
             }
         }
-
+        
         .footer-desgined {
             display: flex;
             justify-content: center;
